Minor fix to Makefile: get cilkprof building

--- a/libzca-src-195/cilkprof/Makefile
+++ b/libzca-src-195/cilkprof/Makefile
@@ -39,7 +39,7 @@ BUILDDIR = $(OUT)
 CXX = icpc
 #CXX = g++
 
-INCLUDE  = -I $(PINDIR)/source/include -I $(PINDIR)/source/include/gen
+INCLUDE  = -I $(PINDIR)/source/include/pin -I $(PINDIR)/source/include/pin/gen 
 INCLUDE += -I $(PINDIR)/extras/xed2-$(PIN_TARGET_ARCH)/include
 INCLUDE += -I $(PINDIR)/extras/components/include
 INCLUDE += -I $(TOP)/zca/include
