Add a doxy file and part of the intel typedefs

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -5,9 +5,9 @@ RM = rm
 
 INSTALLD=../build
 
-.PHONY: all build install
+.PHONY: all build install 
 
-all: build install
+all: build install 
 build:	zca-toggle.o libzca-toggle.so libzca-toggle.a 
 install: 
 	if ! [ -d $(INSTALLD) ]; then mkdir -p $(INSTALLD); fi	
@@ -17,7 +17,7 @@ zca-toggle.o: zca-toggle.c
 	$(CC) -fPIC -g -c -Wall zca-toggle.c
 
 libzca-toggle.so: zca-toggle.o
-	$(CC) -shared -Wl,-soname,libzca-toggle.so -Wl,-init,myInit -o libzca-toggle.so zca-toggle.o -lc
+	$(CC) -shared -Wl,-soname,libzca-toggle.so -Wl,-init,initZCAService -o libzca-toggle.so zca-toggle.o -lc
 
 libzca-toggle.a: zca-toggle.o
 	$(AR) rc libzca-toggle.a zca-toggle.o
