Convert the intel ZCA typedefs to C rather than C++.

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -5,15 +5,18 @@ RM = rm
 
 INSTALLD=../build
 
+SRC= zca-toggle.c zca-types.h include/zca-toggle.h
+
 .PHONY: all build install 
 
-all: build install 
+all: build install
+
 build:	zca-toggle.o libzca-toggle.so libzca-toggle.a 
-install: 
+install: build
 	if ! [ -d $(INSTALLD) ]; then mkdir -p $(INSTALLD); fi	
 	cp libzca-toggle.so libzca-toggle.a $(INSTALLD)
 
-zca-toggle.o: zca-toggle.c
+zca-toggle.o: $(SRC)
 	$(CC) -fPIC -g -c -Wall zca-toggle.c
 
 libzca-toggle.so: zca-toggle.o
