Mark the headers with conditional extern C so that they can be used from C or C++

--- a/zcatoggle/Makefile
+++ b/zcatoggle/Makefile
@@ -4,5 +4,14 @@ all: install docs
 
 install:
 	(cd src; $(MAKE) install)
+
+test: install docs 
+	(cd example; $(MAKE))
+
 docs:
 	doxygen zca-toggle.cfg
+
+clean:
+	rm -rf html/ latex/
+	(cd src;     $(MAKE) clean)
+	(cd example; $(MAKE) clean)
