Sketching out a bit more types, documentation, files, for teh new library

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -1,29 +1,38 @@
 
-CC = icc -I./include/
+CC = icc -I./include/ -Wall
 AR = ar
 RM = rm
 
 INSTALLD=../build
 
-SRC= zca-toggle.c zca-types.h include/zca-toggle.h
+HDRS = zca-types.h include/zca-toggle.h
+CODE = zca-toggle.c elf-provider.c
+OBJ = $(CODE:.c=.o)
+SRC = $(HDRS) $(CODE)
+
+LIBS = libzca-toggle.so libzca-toggle.a 
 
 .PHONY: all build install 
 
 all: build install
 
-build:	zca-toggle.o libzca-toggle.so libzca-toggle.a 
+build:	$(LIBS)
 install: build
 	if ! [ -d $(INSTALLD) ]; then mkdir -p $(INSTALLD); fi	
-	cp libzca-toggle.so libzca-toggle.a $(INSTALLD)
+	cp $(LIBS) $(INSTALLD)
 
-zca-toggle.o: $(SRC)
-	$(CC) -fPIC -g -c -Wall zca-toggle.c
+# %.o: $(SRC)
+# 	$(CC) -fPIC -g -c -Wall zca-toggle.c
 
-libzca-toggle.so: zca-toggle.o
-	$(CC) -shared -Wl,-soname,libzca-toggle.so -Wl,-init,initZCAService -o libzca-toggle.so zca-toggle.o -lc
+.c.o:
+	$(CC) -fPIC -g -c -Wall -o $@ $<
+#        $(COMPILE) -DCHECKING -c -o $@ $<
 
-libzca-toggle.a: zca-toggle.o
-	$(AR) rc libzca-toggle.a zca-toggle.o
+libzca-toggle.so: $(OBJ)
+	$(CC) -shared -Wl,-soname,libzca-toggle.so -Wl,-init,initZCAService -o libzca-toggle.so $(OBJ) -lc
+
+libzca-toggle.a: $(OBJ) 
+	$(AR) rc libzca-toggle.a $(OBJ)
 
 clean:
-	$(RM) -f zca-toggle.o libzca-toggle.so libzca-toggle.a $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a 
+	$(RM) -f $(OBJ) $(LIBS) $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a 
