--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -1,38 +1,45 @@
 
-CC = icc -I./include/ -Wall
+ARGS= -I./include/ -Wall
+# CC  = gcc $(ARGS)
+# CPP = g++ -std=c++11 $(ARGS)
+# CC  = clang $(ARGS)
+# CPP = clang $(ARGS)
+CC  = icc $(ARGS)
+CPP = icpc -std=c++11 $(ARGS)
 AR = ar
 RM = rm
 
 INSTALLD=../build
 
 HDRS = zca-types.h include/zca-toggle.h
-CODE = zca-toggle.c elf-provider.c
-OBJ = $(CODE:.c=.o)
+CODE = zca-toggle.c elf-provider.cpp
+OBJ0 = $(CODE:.c=.o)
+OBJ  = $(OBJ0:.cpp=.o)
 SRC = $(HDRS) $(CODE)
 
-LIBS = libzca-toggle.so libzca-toggle.a 
+LIBS = -lelf
+
+LIBSOUT = libzca-toggle.so libzca-toggle.a 
 
 .PHONY: all build install 
 
 all: build install
 
-build:	$(LIBS)
+build:	$(LIBSOUT)
 install: build
 	if ! [ -d $(INSTALLD) ]; then mkdir -p $(INSTALLD); fi	
-	cp $(LIBS) $(INSTALLD)
-
-# %.o: $(SRC)
-# 	$(CC) -fPIC -g -c -Wall zca-toggle.c
+	cp $(LIBSOUT) $(INSTALLD)
 
 .c.o:
 	$(CC) -fPIC -g -c -Wall -o $@ $<
-#        $(COMPILE) -DCHECKING -c -o $@ $<
+.cpp.o:
+	$(CPP) -fPIC -g -c -Wall -o $@ $<
 
 libzca-toggle.so: $(OBJ)
-	$(CC) -shared -Wl,-soname,libzca-toggle.so -Wl,-init,initZCAService -o libzca-toggle.so $(OBJ) -lc
+	$(CC) $(LIBS) -shared -Wl,-soname,libzca-toggle.so -Wl,-init,initZCAService -o libzca-toggle.so $(OBJ) -lc
 
 libzca-toggle.a: $(OBJ) 
 	$(AR) rc libzca-toggle.a $(OBJ)
 
 clean:
-	$(RM) -f $(OBJ) $(LIBS) $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a 
+	$(RM) -f $(OBJ) $(LIBSOUT) $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a 
