Continued debugging - problems reading ELF data section

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -1,5 +1,5 @@
 
-ARGS= -I./include/ -Wall
+ARGS= -g -I./include/ -Wall
 # CC  = gcc $(ARGS)
 # CPP = g++ -std=c++11 $(ARGS)
 # CC  = clang $(ARGS)
@@ -31,7 +31,7 @@ install: build
 	cp $(LIBSOUT) $(INSTALLD)
 
 test: build test.cpp hello_notify.exe elf-provider.o
-	$(CPP) test.cpp libzca-toggle.a $(LIBS) -o test.exe
+	$(CPP) -g test.cpp libzca-toggle.a $(LIBS) -o test.exe
 	./test.exe
 
 hello_notify.exe: hello_notify.c
