Adding smallest case scenario where AsmJit error occurs

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -1,6 +1,7 @@
 
 ARGS= -g -I./include/ -I../3rdparty -Wall
 DEFS= -DTARGET_IA32E -DTARGET_LINUX -DFUND_TC_HOSTCPU=FUND_CPU_INTEL64
+INCLUDES= -I ../../niknatar_prototype/libzca-src-195/zca/include/ -I ../../niknatar_prototype/3rdparty/pintool/source/include/pin/ -I ../../niknatar_prototype/3rdparty/pintool/source/include/pin/gen/ -I ../../niknatar_prototype/3rdparty/pintool/extras/components/include/util/ -I ../../niknatar_prototype/3rdparty/pintool/extras/components/include/ -I ../../niknatar_prototype/3rdparty/pintool/extras/xed2-intel64/include/
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
 # CC  = gcc $(ARGS)
 # CPP = g++ -std=c++11 $(ARGS)
@@ -60,8 +61,16 @@ libzca-toggle.so: $(OBJ) $(DEPS)
 libzca-toggle.a: $(OBJ) $(DEPS) 
 	$(AR) rc libzca-toggle.a $(OBJ) $(DEPS)
 
-# test6: test6.cpp
-# 	icc -g -I../3rdparty/ ../3rdparty/AsmJit/*.cpp -O0 -std=c++11 test6.cpp -lelf -o test6.exe
+test6: test6.cpp
+	icc -g -I../3rdparty/ -I./include ../3rdparty/AsmJit/*.cpp -O0 -std=c++11 test6.cpp -lelf -o test6.exe
+
+test8: test8.cpp 
+	icc -g -I../3rdparty/ -I./include ../3rdparty/AsmJit/*.cpp -O0 -std=c++11 test8.cpp $(INCLUDES) $(DEFS) -lelf -o test8.exe 
+	./test8.exe
+
+asm: asmjit.cpp
+	icc -g -I../3rdparty ../3rdparty/AsmJit/*.cpp  -std=c++11 asmjit.cpp -lelf -o asm.exe
+	./asm.exe
 
 clean:
 	$(RM) -f $(OBJ) $(DEPS) $(LIBSOUT) $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a hello_notify.exe
