STL hashtable for getting annotation data in JIT code

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -39,7 +39,7 @@ install: build
 	cp $(LIBSOUT) $(INSTALLD)
 
 test: build test.cpp hello_notify.exe elf-provider.o
-	$(CPP) $(OPTS)  test.cpp libzca-toggle.a $(LIBS) -o test.exe
+	$(CPP) $(OPTS) -DPROBE_LOOP test.cpp libzca-toggle.a $(LIBS) -o test.exe
 	./test.exe
 
 # Benchmark binary generation targets
