Improvements to memory allocation algorithm

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -93,4 +93,4 @@ asm: asmjit.cpp
 ### End of Testing stuff ###
 
 clean:
-	$(RM) -f $(OBJ) $(DEPS) $(LIBSOUT) $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a hello_notify.exe
+	$(RM) -f $(OBJ) $(DEPS) $(LIBSOUT) $(INSTALLD)/libzca-toggle.so $(INSTALLD)/libzca-toggle.a hello_notify.exe *.exe
