Adding probe activation and deactivation test

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -58,6 +58,10 @@ test_prof_off_probe_loop: build bench.cpp elf-provider.o
 test_prof_on_large_probe_count : build bench.cpp elf-provider.o
 	$(CPP) $(CFLAGS) -DLOG_LEVEL=2 -DPROFILE=1 bench.cpp libzca-toggle.a $(LIBS) -o app_prof_on_large_probe_count.exe
 
+test_prof_on_activations: build bench.cpp elf-provider.o
+	$(CPP) $(CFLAGS) -DLOG_LEVEL=2 -DPROFILE=1 bench.cpp libzca-toggle.a $(LIBS) -o app_prof_on_activations.exe
+
+
 hello_notify.exe: hello_notify.c
 	$(CC) hello_notify.c -o hello_notify.exe
 
