Copying binaries for the tests

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -14,6 +14,7 @@ RM = rm
 OPTS=-DLOG_LEVEL=2 -DPROFILE=1 # -DON
 
 INSTALLD=../build
+BENCHMARKS=../../benchmarks/gzip/instrumented ../../benchmarks/grep/instrumented/lib
 
 THIRD_PARTY = ../3rdparty
 ASM_JIT = $(THIRD_PARTY)/AsmJit
@@ -27,7 +28,7 @@ DEPS = $(DEPS0:.cpp=.o)
 SRC = $(HDRS) $(CODE)
 LIBS = -lelf -lpthread
 
-LIBSOUT = libzca-toggle.so libzca-toggle.a 
+LIBSOUT = libzca-toggle.so libzca-toggle.a libdynprof.a 
 
 .PHONY: all build install 
 
@@ -37,6 +38,7 @@ build:	$(LIBSOUT)
 install: build
 	if ! [ -d $(INSTALLD) ]; then mkdir -p $(INSTALLD); fi	
 	cp $(LIBSOUT) $(INSTALLD)
+	echo $(BENCHMARKS) | xargs -n 1 cp $(LIBSOUT)
 
 test: build test.cpp 
 	$(CPP) $(OPTS) test.cpp libzca-toggle.a $(LIBS) -o test.exe
@@ -81,6 +83,9 @@ libzca-toggle.so: $(OBJ) $(DEPS)
 
 libzca-toggle.a: $(OBJ) $(DEPS) 
 	$(AR) rc libzca-toggle.a $(OBJ) $(DEPS)
+
+libdynprof.a : $(OBJ) $(DEPS)
+	$(AR) rc libdynprof.a profiler.o
 
 prof : build profiler.o
 	$(AR) rc libdynprof.a profiler.o
