Installing header files for benchmarks

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -30,6 +30,7 @@ LIBS = -lelf -lpthread
 # CFLAGS=-O0
 
 LIBSOUT = libzca-toggle.so libzca-toggle.a libdynprof.a 
+HDRSOUT = include/profiler.h
 
 .PHONY: all build install 
 
@@ -40,6 +41,7 @@ install: build
 	if ! [ -d $(INSTALLD) ]; then mkdir -p $(INSTALLD); fi	
 	cp $(LIBSOUT) $(INSTALLD)
 	echo $(BENCHMARKS) | xargs -n 1 cp $(LIBSOUT)
+	echo $(BENCHMARKS) | xargs -n 1 cp $(HDRSOUT)
 
 test: build test.cpp 
 	$(CPP) $(OPTS) test.cpp libzca-toggle.a $(LIBS) -o test.exe
