--- a/run-benchmarks.cabal
+++ b/run-benchmarks.cabal
@@ -7,7 +7,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable run-benchmarks.exe
-  main-is:             run-benchmark.hs
+  main-is:             run-benchmarks.hs
   other-extensions:    CPP, BangPatterns, DeriveGeneric
   build-depends:       base >=4.6, deepseq >=1.3, time >=1.4, 
                        containers >=0.5, process >= 1.1, directory,
