Adding INIT_TIME tag for HSBencher harvesting

--- a/zcatoggle/src/Makefile
+++ b/zcatoggle/src/Makefile
@@ -11,7 +11,7 @@ CC  = icc $(ARGS)
 CPP = icpc -std=c++11 $(ARGS) 
 AR = ar
 RM = rm
-OPTS=-DLOG_LEVEL=2 # -DPROFILE=1 # -DON
+OPTS=-DLOG_LEVEL=2 -DPROFILE=1 # -DON
 
 INSTALLD=../build
 BENCHMARKS=../../benchmarks/gzip-1.6/instrumented ../../benchmarks/grep-2.18/instrumented/ ../../benchmarks/grep-2.18/instrumented/src
